# ftd

./: CMakeLists.txt  Readme.md
include/ftd/data/: option.hpp  result.hpp
tests/: CMakeLists.txt
tests/src/: option.cpp  result.cpp
